--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,17 @@
 server:
-  port: 8090
+  port: 8081
+
 spring:
-  h2:
-    console:
-      enabled: true
-
-  datasource:
-    url: jdbc:h2:mem:test
-
   jpa:
     show-sql: true
     generate-ddl: true
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  datasource:
+    url: jdbc:postgresql://localhost:5432/jobapp
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
